# lfr_rust_custom_element

./: Cargo.toml  README.md  index.html  index.scss  package.json
src/: component.rs  lib.rs
