[package]
name = "lf_rust_iframe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19"
custom-elements = "0.2.0"
gloo-console = "0.2"
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Window",
  'Document',
]